--- a/ArturTI225.Domain/ArturTI225.Domain.csproj
+++ b/ArturTI225.Domain/ArturTI225.Domain.csproj
@@ -39,11 +39,12 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Entities\Auth\User.cs" />
         <Compile Include="Entities\Car.cs" />
         <Compile Include="Entities\CarDetail.cs" />
-        <Compile Include="Entities\Customer.cs" />
         <Compile Include="Entities\Order.cs" />
         <Compile Include="Entities\Service.cs" />
+        <Compile Include="Enums\Roles.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
