--- a/ArturTI225.WebUI/ArturTI225.WebUI.csproj
+++ b/ArturTI225.WebUI/ArturTI225.WebUI.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')"/>
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
+    <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,13 +16,13 @@
         <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
         <MvcBuildViews>false</MvcBuildViews>
         <UseIISExpress>true</UseIISExpress>
-        <Use64BitIISExpress/>
-        <IISExpressSSLPort/>
-        <IISExpressAnonymousAuthentication/>
-        <IISExpressWindowsAuthentication/>
-        <IISExpressUseClassicPipelineMode/>
-        <UseGlobalApplicationHostFile/>
-        <NuGetPackageImportStamp/>
+        <Use64BitIISExpress />
+        <IISExpressSSLPort />
+        <IISExpressAnonymousAuthentication />
+        <IISExpressWindowsAuthentication />
+        <IISExpressUseClassicPipelineMode />
+        <UseGlobalApplicationHostFile />
+        <NuGetPackageImportStamp />
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <DebugSymbols>true</DebugSymbols>
@@ -42,24 +43,30 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Microsoft.CSharp"/>
-        <Reference Include="System"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Drawing"/>
-        <Reference Include="System.Web.DynamicData"/>
-        <Reference Include="System.Web.ApplicationServices"/>
-        <Reference Include="System.ComponentModel.DataAnnotations"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Data.DataSetExtensions"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Web"/>
-        <Reference Include="System.Web.Extensions"/>
-        <Reference Include="System.Web.Abstractions"/>
-        <Reference Include="System.Web.Routing"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="System.Configuration"/>
-        <Reference Include="System.Web.Services"/>
-        <Reference Include="System.EnterpriseServices"/>
+        <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+        </Reference>
+        <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+        </Reference>
+        <Reference Include="Microsoft.CSharp" />
+        <Reference Include="System" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Drawing" />
+        <Reference Include="System.Web.DynamicData" />
+        <Reference Include="System.Web.ApplicationServices" />
+        <Reference Include="System.ComponentModel.DataAnnotations" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Web" />
+        <Reference Include="System.Web.Extensions" />
+        <Reference Include="System.Web.Abstractions" />
+        <Reference Include="System.Web.Routing" />
+        <Reference Include="System.Xml" />
+        <Reference Include="System.Configuration" />
+        <Reference Include="System.Web.Services" />
+        <Reference Include="System.EnterpriseServices" />
         <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
             <Private>True</Private>
             <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -113,14 +120,16 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="App_Start\BundleConfig.cs"/>
-        <Compile Include="App_Start\FilterConfig.cs"/>
-        <Compile Include="App_Start\RouteConfig.cs"/>
-        <Compile Include="Controllers\HomeController.cs"/>
+        <Compile Include="App_Start\BundleConfig.cs" />
+        <Compile Include="App_Start\FilterConfig.cs" />
+        <Compile Include="App_Start\RouteConfig.cs" />
+        <Compile Include="Controllers\AccountController.cs" />
+        <Compile Include="Controllers\AdminController.cs" />
+        <Compile Include="Controllers\HomeController.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Content\images\call-icon.png" />
@@ -175,8 +184,8 @@
         <Content Include="Content\styles\responsive.css" />
         <Content Include="Content\styles\slick.css" />
         <Content Include="Content\styles\style.css" />
-        <Content Include="favicon.ico"/>
-        <Content Include="Global.asax"/>
+        <Content Include="favicon.ico" />
+        <Content Include="Global.asax" />
         <Content Include="Scripts\bootstrap.bundle.js" />
         <Content Include="Scripts\bootstrap.bundle.js.map" />
         <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -194,28 +203,32 @@
         <Content Include="Scripts\plugin.js" />
         <Content Include="Scripts\popper.min.js" />
         <Content Include="Scripts\slider-setting.js" />
+        <Content Include="Views\Account\Login.cshtml" />
+        <Content Include="Views\Account\Register.cshtml" />
+        <Content Include="Views\Admin\Index.cshtml" />
         <Content Include="Views\Home\Clients.cshtml" />
         <Content Include="Views\Home\Services.cshtml" />
-        <Content Include="Web.config"/>
+        <Content Include="Views\Shared\_AuthLayout.cshtml" />
+        <Content Include="Web.config" />
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
         </Content>
         <Content Include="Web.Release.config">
             <DependentUpon>Web.config</DependentUpon>
         </Content>
-        <Content Include="Views\Web.config"/>
-        <Content Include="Views\_ViewStart.cshtml"/>
-        <Content Include="Views\Shared\Error.cshtml"/>
-        <Content Include="Views\Shared\_Layout.cshtml"/>
-        <Content Include="Views\Home\About.cshtml"/>
-        <Content Include="Views\Home\Contact.cshtml"/>
-        <Content Include="Views\Home\Index.cshtml"/>
+        <Content Include="Views\Web.config" />
+        <Content Include="Views\_ViewStart.cshtml" />
+        <Content Include="Views\Shared\Error.cshtml" />
+        <Content Include="Views\Shared\_Layout.cshtml" />
+        <Content Include="Views\Home\About.cshtml" />
+        <Content Include="Views\Home\Contact.cshtml" />
+        <Content Include="Views\Home\Index.cshtml" />
     </ItemGroup>
     <ItemGroup>
-        <Folder Include="App_Data"/>
+        <Folder Include="App_Data" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="packages.config"/>
+        <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\ArturTI225.BusinessLogic\ArturTI225.BusinessLogic.csproj">
@@ -235,10 +248,10 @@
         <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
         <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     </PropertyGroup>
-    <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
-    <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''"/>
+    <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+    <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
     <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
-        <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)"/>
+        <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
     </Target>
     <ProjectExtensions>
         <VisualStudio>
@@ -251,7 +264,7 @@
                     <IISUrl>http://localhost:5000/</IISUrl>
                     <NTLMAuthentication>False</NTLMAuthentication>
                     <UseCustomServer>False</UseCustomServer>
-                    <CustomServerUrl/>
+                    <CustomServerUrl />
                     <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
                 </WebProjectProperties>
             </FlavorProperties>
@@ -261,8 +274,11 @@
         <PropertyGroup>
             <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them. For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
         </PropertyGroup>
-        <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))"/>
+        <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+        <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+        <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
     </Target>
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
