--- a/ArturTI225.WebUI/ArturTI225.WebUI.csproj
+++ b/ArturTI225.WebUI/ArturTI225.WebUI.csproj
@@ -124,12 +124,19 @@
         <Compile Include="App_Start\FilterConfig.cs" />
         <Compile Include="App_Start\RouteConfig.cs" />
         <Compile Include="Controllers\AccountController.cs" />
-        <Compile Include="Controllers\AdminController.cs" />
         <Compile Include="Controllers\HomeController.cs" />
+        <Compile Include="Controllers\CarsSalesPanelController.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Content Include="Views\CarsSalesPanel\Create.cshtml" />
+        <Content Include="Views\CarsSalesPanel\CreditCalculator.cshtml" />
+        <Content Include="Views\CarsSalesPanel\Delete.cshtml" />
+        <Content Include="Views\CarsSalesPanel\Details.cshtml" />
+        <Content Include="Views\CarsSalesPanel\Edit.cshtml" />
+        <Content Include="Views\CarsSalesPanel\Index.cshtml" />
+        <Content Include="Views\Shared\_CarsSalesLayout.cshtml" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Content\images\call-icon.png" />
@@ -205,7 +212,6 @@
         <Content Include="Scripts\slider-setting.js" />
         <Content Include="Views\Account\Login.cshtml" />
         <Content Include="Views\Account\Register.cshtml" />
-        <Content Include="Views\Admin\Index.cshtml" />
         <Content Include="Views\Home\Clients.cshtml" />
         <Content Include="Views\Home\Services.cshtml" />
         <Content Include="Views\Shared\_AuthLayout.cshtml" />
